# xmonad

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  README.md  deploy.sh
.history/xmonad/.xmonad/: xmonad_20180910102759.hs  xmonad_20180910103013.hs  xmonad_20180910103050.hs  xmonad_20180910103605.hs  xmonad_20180910103630.hs  xmonad_20180910103639.hs  xmonad_20180910103730.hs  xmonad_20180910103759.hs  xmonad_20180910103808.hs  xmonad_20180910103833.hs  xmonad_20180910103916.hs  xmonad_20180910103924.hs  xmonad_20180910103935.hs  xmonad_20180910104003.hs  xmonad_20180910104014.hs  xmonad_20180910104023.hs  xmonad_20180910104032.hs  xmonad_20180910104123.hs  xmonad_20180910104133.hs  xmonad_20180910104156.hs  xmonad_20180910104223.hs  xmonad_20180910125401.hs  xmonad_20180910125444.hs  xmonad_20180910125513.hs  xmonad_20180910125521.hs  xmonad_20180910125552.hs  xmonad_20180910130911.hs  xmonad_20180910130947.hs  xmonad_20180910130953.hs  xmonad_20180910131050.hs  xmonad_20180910131257.hs  xmonad_20180912125209.hs  xmonad_20180912125320.hs  xmonad_20180912125702.hs  xmonad_20180912125821.hs  xmonad_20180912125837.hs  xmonad_20180912125928.hs  xmonad_20180912125958.hs  xmonad_20180912131723.hs  xmonad_20180912131926.hs  (+13 more)
compton/: .compton.conf
dunst/.config/dunst/: dunstrc
rofi/.config/rofi/: blur.rasi  (+1 more)
x/: .Xdefaults  .Xdefaults-alt  .Xresources  .Xsession  .xinitrc
xmobar/: .xmobarrc
xmonad/.xmonad/: Sidebar.hs  SworneXmonad.cabal  xmobar.hs  xmonad.hs
xmonad/.xmonad/lib/: Padding.hi  Padding.hs  Unsplash.hs  Yaml.hs
zsh/: .alias_personal  .zshrc
